[gd_scene load_steps=5 format=2]

[ext_resource path="res://TowerDefence/TD_Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://NixLib/Common/Camera.gd" type="Script" id=2]
[ext_resource path="res://TowerDefence/HUD/TD_HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://TowerDefence/TowerDefence.gd" type="Script" id=4]

[node name="TowerDefence" type="Node"]
script = ExtResource( 4 )

[node name="TD_Map" parent="." instance=ExtResource( 1 )]

[node name="Camera2D_Zoom" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 2 )

[node name="TD_HUD" parent="." instance=ExtResource( 3 )]
[connection signal="select_grid" from="TD_Map" to="." method="_on_TD_Map_select_grid"]
[connection signal="select_action" from="TD_HUD" to="." method="_on_TD_HUD_select_action"]
